--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apexcharts": "^4.0.0",
     "bootstrap": "^5.3.2",
     "choices.js": "^10.1.0",
+    "crypto-js": "^4.2.0",
     "datatables.net-bs5": "^1.13.4",
     "fslightbox-react": "^1.7.2",
     "jquery": "^3.6.4",
