--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@fullcalendar/react": "^6.1.5",
     "@reduxjs/toolkit": "^2.0.1",
     "apexcharts": "^4.0.0",
-    "bootstrap": "^5.3.2",
+    "axios": "^1.11.0",
+    "bootstrap": "^5.3.7",
     "choices.js": "^10.1.0",
     "crypto-js": "^4.2.0",
     "datatables.net-bs5": "^1.13.4",
+    "date-fns": "^4.1.0",
     "fslightbox-react": "^1.7.2",
     "jquery": "^3.6.4",
     "leaflet": "^1.7.1",
@@ -33,14 +35,16 @@
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
-    "react-bootstrap": "^2.9.2",
+    "react-bootstrap": "^2.10.10",
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.5.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.11",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
-    "react-select": "^5.7.2",
+    "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "sass": "^1.69.5",
     "select2": "^4.1.0-rc.0",
